--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,7 @@
-HELP.md
-.gradle
-build/
-!gradle/wrapper/gradle-wrapper.jar
-!**/src/main/**
-!**/src/test/**
-
-### STS ###
-.apt_generated
+build
+bin
 .classpath
-.factorypath
-.project
 .settings
-.springBeans
-.sts4-cache
+.project
+.gradle
 
-### IntelliJ IDEA ###
-.idea
-*.iws
-*.iml
-*.ipr
-out/
-
-### NetBeans ###
-/nbproject/private/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
-
-### VS Code ###
-.vscode/
