--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 group = 'com.github.labcabrera.reactive.jwt'
-version = '0.0.1-SNAPSHOT'
+version = version
 sourceCompatibility = '1.8'
 
 configurations {
@@ -25,7 +25,6 @@ dependencyManagement {
 }
 
 dependencies {
-	//implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation "io.jsonwebtoken:jjwt:0.9.1"
